--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <app-root>Loading...</app-root>
-    <base href="/">
-  </body>
+    <base href="https://joster422.github.io/ng-moxie/">
+  <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
 </html>
