--- a/index.html
+++ b/index.html
@@ -1,14 +1,56 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Moxie's Joint Cafe' &amp; Grille</title>
+<head>
+  <meta charset="utf-8">
+  <title>Moxie's Joint Cafe' &amp; Grille</title>
+  <base href="https://joster422.github.io/ng-moxie/">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-  </head>
-  <body>
-    <app-root>Loading...</app-root>
-    <base href="https://joster422.github.io/ng-moxie/">
-  <script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link href="styles.2b34a4cfc3170398a39d.bundle.css" rel="stylesheet"/></head>
+<body>
+  <app-root>
+    <style>
+        #loading-container {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(20px, 20px);
+        }
+        #loading-spinner {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          background: transparent;
+
+          border-top: 4px solid #fff;
+          border-right: 4px solid #fff;
+          border-bottom: 4px solid #777;
+          border-left: 4px solid #777;
+          
+          -webkit-animation: loading 1.2s infinite linear;
+          -moz-animation: loading 1.2s infinite linear;
+          -ms-animation: loading 1.2s infinite linear;
+          animation: loading 1.2s infinite linear;
+        }
+
+        /* Animation */
+        @-webkit-keyframes loading {
+          to { -webkit-transform: rotate(360deg); }
+        }
+        @-moz-keyframes loading {
+          to { -moz-transform: rotate(360deg); }
+        }
+        @-ms-keyframes loading {
+          to { -ms-transform: rotate(360deg); }
+        }
+        @keyframes loading {
+          to { transform: rotate(360deg); }
+        }
+      </style>
+      <div id="loading-container">
+        <div id="loading-spinner"></div>
+      </div>
+  </app-root>
+<script type="text/javascript" src="inline.55eed356df3ff26fa0fb.bundle.js"></script><script type="text/javascript" src="polyfills.18173234f9641113b9fe.bundle.js"></script><script type="text/javascript" src="vendor.461eb3c264f790f83561.bundle.js"></script><script type="text/javascript" src="main.48e7a28d4a72f041cf5c.bundle.js"></script></body>
 </html>
